# a2a-gateway

./: .dockerignore  .env.example  CLAUDE.md  DEPLOYMENT.md  Dockerfile  README.md  a2a-gateway-prd-v2.md  docker-compose.yml  pyproject.toml  test.txt  test_actions.txt  test_jsonrpc.py  test_reset.txt  test_simple.py
.github/workflows/: notify-on-push.yml
a2a_gateway/: __init__.py  a2a_sdk.py  config.py  main.py  memory_store.py  redis_store.py  routes.py  tasks.py  tools.py
docs/: 01-project-overview.md  02-a2a-protocol.md  03-task-management.md  04-coding-tools.md  05-error-handling.md  06-observability.md  07-security.md  08-deployment.md  09-monitoring.md  10-version-control.md  11-user-feedback.md  12-implementation-plan.md  13-risk-assessment.md  14-appendix.md
